[package]
name = "cptrain_bot_backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-macros = "0.3.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8.2"
package = "0.0.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.28.1", features = ["full"]}
